--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
 		"react-paginate": "^8.2.0",
 		"react-redux": "^8.0.5",
 		"react-simple-star-rating": "^5.1.7",
+		"react-slick": "^0.29.0",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.61.0",
+		"slick-carousel": "^1.8.1",
 		"typescript": "5.0.3"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
 		"@types/js-cookie": "^3.0.3",
 		"@types/lodash": "^4.14.194",
+		"@types/react-slick": "^0.23.10",
 		"prettier": "^2.8.7"
 	}
 }
